k8s/amdocsFailureManager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amdocsfailuremanager
spec:
  selector:
    matchLabels:
      app: amdocsfailuremanager
  template:
    metadata:
      labels:
        app: amdocsfailuremanager
    spec:       
      containers:        
        - image: californibrs/<error image>  #  put a wrong image to demonstrate the "describe" command
          name: amdocsfailuremanager
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: manager
              containerPort: 5002
              protocol: TCP
