k8s/amdocsFailureManager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amdocsfailuremanager
spec:
  type: LoadBalancer
  selector:
    app: amdocsfailuremanager
  ports:
  - port: 5002 # port from application
